--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span id="telefon"><i class="fa fa-phone"></i></span>
             <span id="passwort"><i class="fa fa-lock"></i></span>
         </div>
-        <button><a>Nächster Zufallsmensch</a></button>
+        <button><a>Mach Neu</a></button>
         <p class="fussnote">Adressbuch 2022 von <a>ClaudiaBerlin</a>, <a>AlexiaBerlin</a> und <a>cytoniBerlin</a></p>
     </div>
   </body>
