--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <h1 id="daten"></h1>
         </div>
         <div class="iconleiste">
-            <span id="name"><i class="fa fa-user"></i></span>
-            <span id="email"><i class="fa fa-envelope"></i></span>
-            <span id="geburtstag"><i class="fa fa-calendar-days"></i></span>
-            <span id="adresse"><i class="fa fa-map-location-dot"></i></span>
-            <span id="telefon"><i class="fa fa-phone"></i></span>
-            <span id="passwort"><i class="fa fa-lock"></i></span>
+            <span id="name" class="user"><i class="fa fa-user"></i></span>
+            <span id="email" class="user"><i class="fa fa-envelope"></i></span>
+            <span id="alta" class="user"><i class="fa fa-calendar-days"></i></span>
+            <span id="location" class="user"><i class="fa fa-map-location-dot"></i></span>
+            <span id="phone" class="user"><i class="fa fa-phone"></i></span>
+            <span id="passwort" class="user"><i class="fa fa-lock"></i></span>
         </div>
         <button><a>Mach Neu</a></button>
         <p class="fussnote">Adressbuch 2022 von <a>ClaudiaBerlin</a>, <a>AlexiaBerlin</a> und <a>cytoniBerlin</a></p>
